@@ -3,6 +3,7 @@ August 28, 2009 (ntrel)
   removes the "make" tool field, "exec" project field, "BUILD_RUN2"
   keybinding, filetype build commands - the latter might be readded
   if/when the API makes it possible.
+  Remove obsolete usage of plugin_key_group symbol.
 
 July 15, 2009 (ntrel)
   Update to API 146 (but require 147).
